--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.5.1"
   }
 }
