--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
