--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "passport": "^0.5.3",
@@ -19,6 +20,10 @@
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
+    "@graphql-tools/schema": "^8.3.13",
+    "apollo-server-core": "^3.8.1",
+    "apollo-server-express": "^3.8.1",
+    "graphql": "^16.5.0",
     "nodemon": "^2.0.16"
   }
 }
